# ast_redis

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  config.h.in
CMakeModules/: FindAsterisk.cmake  FindAsterisk.cmake~
cdr_redis/: cdr_redis.c
conf/: res_redis.conf  res_redis_v1.conf
include/: ast_event_json.h  config.h.in  message_queue_pubsub.h  message_serializer.h  pbx_event_message_serializer.h  shared.h
lib/: ast_event_json.c  ast_event_message_serializer.c  ast_event_serializer.c  ast_stasis_message_serializer.c  ast_stasis_serializer.c  msq_redis.c
res_config_redis/: res_config_redis.c  res_config_redis_ast13.c
res_redis/: ast_event_json.c  ast_event_json.h  res_redis.c  res_redis_v1.c
tests/: CMakeLists.txt
